--- a/css/style.scss
+++ b/css/style.scss
@@ -12,13 +12,9 @@ $radioBtn-size: 16px;
 $btn-color: #ccc;
 $active-color: #333;
 
-body {
-	transition: background 0.6s;
-}
-
 .input__container {
 	// container for authorization
-	width: 80%;
+	width: 1200px;
 	margin: 0 auto;
 
 	@media (max-width: 375px) {
@@ -53,9 +49,141 @@ body {
 	margin: 0 auto;
 }
 
+@import 'mixin/mixin';
+
+.input__wrapper {
+	display: flex;
+	align-items: flex-start;
+	column-gap: 75px;
+	.input {
+		@include flex(flex, false, column, center);
+		margin-top: 120px;
+
+		@media (max-width: 375px) {
+			margin-left: 9px;
+		}
+
+		&__text {
+			@include flex(flex, center, false, center);
+			@include font-graphil(18px, #252525, 500, false);
+			width: 200px;
+			height: 33px;
+			border: 1px solid rgba(37, 37, 37, 0.16);
+			border-radius: 5px;
+
+			&:hover {
+				cursor: pointer;
+			}
+		}
+
+		&__text--special {
+			@include font-graphil(32px, #252525, 600, 100%);
+			letter-spacing: -0.01em;
+			margin-top: 29px;
+		}
+
+		&__text--secondary {
+			margin-top: 32px;
+			margin-bottom: 18px;
+			@include font-graphil(18px, #70788b, 400, 130%);
+			border: 5px solid #ffffff;
+
+			&::before {
+				display: block;
+				content: '';
+				background: linear-gradient(
+					270deg,
+					#ffffff 0.11%,
+					#70788b 47.67%,
+					#ffffff 99.36%
+				);
+				width: 10%;
+				height: 1px;
+				position: absolute;
+				top: 265px;
+				margin-left: calc(-9.5% - 10px);
+			}
+
+			&::after {
+				content: '';
+				background: linear-gradient(
+					270deg,
+					#ffffff 0.11%,
+					#70788b 47.67%,
+					#ffffff 99.36%
+				);
+				width: 10%;
+				height: 1px;
+				position: absolute;
+				top: 265px;
+				margin-left: 5px;
+			}
+		}
+
+		.btn {
+			@include flex(flex, center, false, center);
+			@include font-graphil(18px, #ffffff, 600, false);
+			column-gap: 12px;
+			margin-bottom: 12px;
+			width: 472px;
+			height: 44px;
+			border-radius: 8px;
+
+			@media (max-width: 375px) {
+				width: 311px;
+				height: 44px;
+			}
+
+			&:hover {
+				cursor: pointer;
+			}
+
+			&__primary {
+				background: #3d94f8;
+			}
+
+			&__special {
+				background: #5865f2;
+			}
+
+			&__secondary {
+				background: #0ea0e9;
+			}
+
+			&__icon {
+				padding-top: 2px;
+			}
+
+			&__prime {
+				margin-left: 8px;
+			}
+
+			&__spec {
+				margin-left: 4px;
+			}
+		}
+
+		.input__logo {
+			@include flex(flex, false, false, center);
+			column-gap: 12px;
+			margin-top: 240px;
+			padding-bottom: 50px;
+		}
+	}
+
+	.input__picture {
+		@media (max-width: 375px) {
+			display: none;
+		}
+		img {
+			width: 100vh;
+			height: 100vh;
+		}
+	}
+}
+
 .dark-theme {
 	// style dark-theme
-	transition: background 0.6s;
 	background: #14171e;
 
 	.header {
@@ -614,6 +742,9 @@ body {
 								}
 
 								input {
+									width: 100%;
+									padding-top: 5px;
+									padding-bottom: 320px;
 									border: 0;
 									outline: 0;
 									background: 0;
@@ -764,19 +895,19 @@ body {
 						&:hover {
 							cursor: pointer;
 						}
-						// &:hover {
-						// 	transition: all 0.5s;
-						// 	cursor: pointer;
-						// 	background: #0077ff;
+						&:hover {
+							transition: all 0.5s;
+							cursor: pointer;
+							background: #0077ff;
 
-						// 	.select-card__text {
-						// 		color: #ffffff;
-						// 	}
+							.select-card__text {
+								color: #ffffff;
+							}
 
-						// 	.select-card__text--special {
-						// 		color: rgba(255, 255, 255, 0.56);
-						// 	}
-						// }
+							.select-card__text--special {
+								color: rgba(255, 255, 255, 0.56);
+							}
+						}
 
 						&__items {
 							padding-top: 12px;
@@ -2269,7 +2400,6 @@ body {
 				}
 
 				.modal-content--primary {
-					overflow: scroll;
 					width: 433px;
 					height: 750px;
 
@@ -2280,7 +2410,6 @@ body {
 				}
 
 				.modal-content--secondary {
-					overflow: scroll;
 					width: 433px;
 					height: 740px;
 					padding-bottom: 30px;
@@ -3129,6 +3258,9 @@ body {
 							}
 
 							input {
+								width: 100%;
+								padding-top: 5px;
+								padding-bottom: 320px;
 								border: 0;
 								outline: 0;
 								background: 0;
@@ -3268,12 +3400,18 @@ body {
 				@media (max-width: 375px) {
 					width: 33%;
 				}
+
 				.select-card {
 					width: 142px;
 					height: 73px;
 					border-radius: 12px;
 					background: #f8f8f8;
 					transition: all 0.5s;
+
+					.active {
+						background: #0077FF;
+					}
+			
 
 					@media (max-width: 375px) {
 						margin-top: 16px;
@@ -4677,7 +4815,6 @@ body {
 			}
 
 			.modal-content--primary {
-				overflow: scroll;
 				width: 433px;
 				height: 750px;
 
@@ -4688,7 +4825,6 @@ body {
 			}
 
 			.modal-content--secondary {
-				overflow: scroll;
 				width: 433px;
 				height: 740px;
 				padding-bottom: 30px;
