--- a/css/authorization.css
+++ b/css/authorization.css
@@ -1,129 +1,1 @@
-.input__wrapper {
-  display: flex;
-  -moz-column-gap: 75px;
-       column-gap: 75px;
-}
-.input__wrapper .input {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 120px;
-}
-@media (max-width: 375px) {
-  .input__wrapper .input {
-    margin-left: 9px;
-  }
-}
-.input__wrapper .input__text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto Flex";
-  font-size: 18px;
-  color: #252525;
-  font-weight: 500;
-  width: 200px;
-  height: 33px;
-  border: 1px solid rgba(37, 37, 37, 0.16);
-  border-radius: 5px;
-}
-.input__wrapper .input__text:hover {
-  cursor: pointer;
-}
-.input__wrapper .input__text--special {
-  font-family: "Roboto Flex";
-  font-size: 32px;
-  color: #252525;
-  font-weight: 600;
-  line-height: 100%;
-  letter-spacing: -0.01em;
-  margin-top: 29px;
-}
-.input__wrapper .input__text--secondary {
-  margin-top: 32px;
-  margin-bottom: 18px;
-  font-family: "Roboto Flex";
-  font-size: 18px;
-  color: #70788b;
-  font-weight: 400;
-  line-height: 130%;
-  border: 5px solid #ffffff;
-}
-.input__wrapper .input__text--secondary::before {
-  display: block;
-  content: "";
-  background: linear-gradient(270deg, #ffffff 0.11%, #70788b 47.67%, #ffffff 99.36%);
-  width: 10%;
-  height: 1px;
-  position: absolute;
-  top: 265px;
-  margin-left: calc(-9.5% - 10px);
-}
-.input__wrapper .input__text--secondary::after {
-  content: "";
-  background: linear-gradient(270deg, #ffffff 0.11%, #70788b 47.67%, #ffffff 99.36%);
-  width: 10%;
-  height: 1px;
-  position: absolute;
-  top: 265px;
-  margin-left: 5px;
-}
-.input__wrapper .input .btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-family: "Roboto Flex";
-  font-size: 18px;
-  color: #ffffff;
-  font-weight: 600;
-  -moz-column-gap: 12px;
-       column-gap: 12px;
-  margin-bottom: 12px;
-  width: 472px;
-  height: 44px;
-  border-radius: 8px;
-}
-@media (max-width: 375px) {
-  .input__wrapper .input .btn {
-    width: 311px;
-    height: 44px;
-  }
-}
-.input__wrapper .input .btn:hover {
-  cursor: pointer;
-}
-.input__wrapper .input .btn__primary {
-  background: #3d94f8;
-}
-.input__wrapper .input .btn__special {
-  background: #5865f2;
-}
-.input__wrapper .input .btn__secondary {
-  background: #0ea0e9;
-}
-.input__wrapper .input .btn__icon {
-  padding-top: 2px;
-}
-.input__wrapper .input .btn__prime {
-  margin-left: 8px;
-}
-.input__wrapper .input .btn__spec {
-  margin-left: 4px;
-}
-.input__wrapper .input .input__logo {
-  display: flex;
-  align-items: center;
-  -moz-column-gap: 12px;
-       column-gap: 12px;
-  margin-top: 240px;
-  padding-bottom: 50px;
-}
-@media (max-width: 375px) {
-  .input__wrapper .input__picture {
-    display: none;
-  }
-}
-.input__wrapper .input__picture img {
-  position: absolute;
-  bottom: 0;
-}/*# sourceMappingURL=authorization.css.map */
+/*# sourceMappingURL=authorization.css.map */
