--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,47 @@
 @import url(https://fonts.googleapis.com/css?family=Josefin+Sans:400,700);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,400;8..144,500;8..144,600&display=swap");
+.input__container {
+  width: 1200px;
+  margin: 0 auto;
+}
+@media (max-width: 375px) {
+  .input__container {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
+
+.container {
+  width: 1160px;
+  margin: 0 auto;
+  padding: 17px 0px;
+}
+@media (max-width: 375px) {
+  .container {
+    width: 89%;
+  }
+}
+
+.container__primary {
+  width: 1280px;
+  margin: 0 auto;
+  padding: 22px 0px;
+}
+@media (max-width: 375px) {
+  .container__primary {
+    padding-left: 11px;
+  }
+}
+
+.container__special {
+  width: 1310px;
+  margin: 0 auto;
+}
+
 .input__wrapper {
   display: flex;
+  align-items: flex-start;
   -moz-column-gap: 75px;
        column-gap: 75px;
 }
@@ -127,54 +166,11 @@
   }
 }
 .input__wrapper .input__picture img {
-  position: absolute;
-  bottom: 0;
-}
-
-body {
-  transition: background 0.6s;
-}
-
-.input__container {
-  width: 80%;
-  margin: 0 auto;
-}
-@media (max-width: 375px) {
-  .input__container {
-    width: 95%;
-    margin: 0 auto;
-  }
-}
-
-.container {
-  width: 1160px;
-  margin: 0 auto;
-  padding: 17px 0px;
-}
-@media (max-width: 375px) {
-  .container {
-    width: 89%;
-  }
-}
-
-.container__primary {
-  width: 1280px;
-  margin: 0 auto;
-  padding: 22px 0px;
-}
-@media (max-width: 375px) {
-  .container__primary {
-    padding-left: 11px;
-  }
-}
-
-.container__special {
-  width: 1310px;
-  margin: 0 auto;
+  width: 100vh;
+  height: 100vh;
 }
 
 .dark-theme {
-  transition: background 0.6s;
   background: #14171e;
 }
 .dark-theme .header {
@@ -819,6 +815,9 @@ body {
   line-height: 100%;
 }
 .dark-theme .main .cards-inner__wrapper .cards__inner .card-shop__wrapper .feedback__wrapper .feedback-card__items input {
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 320px;
   border: 0;
   outline: 0;
   background: 0;
@@ -1015,6 +1014,17 @@ body {
 }
 .dark-theme .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card:hover {
   cursor: pointer;
+}
+.dark-theme .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card:hover {
+  transition: all 0.5s;
+  cursor: pointer;
+  background: #0077ff;
+}
+.dark-theme .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card:hover .select-card__text {
+  color: #ffffff;
+}
+.dark-theme .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card:hover .select-card__text--special {
+  color: rgba(255, 255, 255, 0.56);
 }
 .dark-theme .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card__items {
   padding-top: 12px;
@@ -2698,7 +2708,6 @@ body {
   }
 }
 .dark-theme .main .modal--special .modal-dialog--special .modal-content--primary {
-  overflow: scroll;
   width: 433px;
   height: 750px;
 }
@@ -2709,7 +2718,6 @@ body {
   }
 }
 .dark-theme .main .modal--special .modal-dialog--special .modal-content--secondary {
-  overflow: scroll;
   width: 433px;
   height: 740px;
   padding-bottom: 30px;
@@ -3798,6 +3806,9 @@ body {
   }
 }
 .main .cards-inner__wrapper .cards__inner .card-shop__wrapper .feedback__wrapper .feedback-card__items input {
+  width: 100%;
+  padding-top: 5px;
+  padding-bottom: 320px;
   border: 0;
   outline: 0;
   background: 0;
@@ -3988,6 +3999,9 @@ body {
   border-radius: 12px;
   background: #f8f8f8;
   transition: all 0.5s;
+}
+.main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card .active {
+  background: #0077FF;
 }
 @media (max-width: 375px) {
   .main .cards-inner__wrapper .card__inner--primary .select-card__wrapper .select-card {
@@ -5610,7 +5624,6 @@ body {
   }
 }
 .main .modal--special .modal-dialog--special .modal-content--primary {
-  overflow: scroll;
   width: 433px;
   height: 750px;
 }
@@ -5621,7 +5634,6 @@ body {
   }
 }
 .main .modal--special .modal-dialog--special .modal-content--secondary {
-  overflow: scroll;
   width: 433px;
   height: 740px;
   padding-bottom: 30px;
